--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             </div>
         </div>
     </div>
-    <script src="http://libs.baidu.com/jquery/1.7.2/jquery.js"></script>
+    <script src="https://libs.baidu.com/jquery/1.7.2/jquery.js"></script>
     <script src="jquery.fullPage.js"></script>
     <script>
         $(function() {
