--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
     <meta name="description" content="portfolio">
     <link rel="stylesheet" href="jquery.fullPage.css">
     <link rel="stylesheet" href="style.css">
-
+<script>
+//Baidu
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?0d684c977a65aaabd97ff7424155c52b";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+    
+</script>
 </head>
 
 <body>
