--- a/index.html
+++ b/index.html
@@ -3,30 +3,34 @@
 
 <head>
     <meta charset="utf-8">
-    <title>portfolio</title>
+    <title>Mary Li - Portfolio</title>
     <meta name="keywords" content="portfolio">
-    <meta name="description" content="portfolio">
+    <meta name="description" content="Mary Li - Portfolio">
     <link rel="stylesheet" href="jquery.fullPage.css">
     <link rel="stylesheet" href="style.css">
-<script>
-//Baidu
-var _hmt = _hmt || [];
-(function() {
-  var hm = document.createElement("script");
-  hm.src = "https://hm.baidu.com/hm.js?0d684c977a65aaabd97ff7424155c52b";
-  var s = document.getElementsByTagName("script")[0]; 
-  s.parentNode.insertBefore(hm, s);
-})();
-    
-</script>
+    <script>
+        //Baidu
+        var _hmt = _hmt || [];
+        (function() {
+            var hm = document.createElement("script");
+            hm.src = "https://hm.baidu.com/hm.js?0d684c977a65aaabd97ff7424155c52b";
+            var s = document.getElementsByTagName("script")[0];
+            s.parentNode.insertBefore(hm, s);
+        })();
+
+    </script>
 </head>
 
 <body>
+    <ul id="button">
+        <li data-menuanchor="page1"><a href="index.html" class="menu-button">English</a></li>
+        <li data-menuanchor="page2"><a href="cn.html" class="menu-button">简体中文</a></li>
+    </ul>
     <div id="fullPage">
-        <div class="section">
+        <div class="section" style="background-image:url(portfolio.jpg);background-size: cover">
             <div class="slide">
-                <h3>My Portfolio</h3>
-                <h5>Take a tour</h5>
+                <h3>MARY LI'S PORTFOLIO</h3>
+                <h5>TAKE A TOUR</h5>
 
             </div>
         </div>
@@ -35,18 +39,35 @@ var _hmt = _hmt || [];
                 <div class="container">
                     <div class="text">
                         <h3>HSBC Mortgage Process Optimization</h3>
-                        <h5>China DMMA - Mortgage Mini Program</h3>
+                        <h5>China DMMA - Mortgage Mini Program</h5>
                             <p>I am the BA(business analyst) person for this project.</p>
 
                             <p>It allows customer to initiate a mortgage application from Wechat and submit it by themselves. A Sales person will be allocated immediately upon application submission.</p>
                             <p>The highlights in digital technologies here are OCR and E-sign feature. The program is integrated with HSBC global APIs
                             <p>
-
                     </div>
                     <div class="image">
-                        <img src="works/hsbc/wechat1.png">
-                        <img src="works/hsbc/wechat2.png">
+                        <img src="works/hsbc/China/1.png">
+                        <img src="works/hsbc/China/2.png">
 
+                    </div>
+                </div>
+            </div>
+            <div class="slide">
+                <div class="container">
+                    <div class="image">
+                        <img src="works/hsbc/China/3.png">
+                        <img src="works/hsbc/China/4.png">
+                        <img src="works/hsbc/China/7.png">
+                        <img src="works/hsbc/China/6.png">
+
+                    </div>
+                </div>
+            </div>
+            <div class="slide">
+                <div class="container">
+                    <div class="image">
+                        <img src="works/hsbc/China/8.png">
                     </div>
                 </div>
             </div>
@@ -54,7 +75,7 @@ var _hmt = _hmt || [];
                 <div class="container">
                     <div class="text">
                         <h3>HSBC Mortgage Process Optimization</h3>
-                        <h5>New Mortgage - Staff Channel</h5>
+                        <h5>HSBC Hong Kong - Staff Channel</h5>
                         <p>I am the BA(business analyst) person for this project.</p>
 
                         <p>It is the workbench for bank staffs to create new mortgage applications for the customers when they reached to bank.</p>
@@ -63,8 +84,15 @@ var _hmt = _hmt || [];
 
                     </div>
                     <div class="image">
-                        <img src="works/hsbc/staff1.png">
-                        <img src="works/hsbc/staff2.png">
+                        <img src="works/hsbc/HK/1.png">
+
+                    </div>
+                </div>
+            </div>
+            <div class="slide">
+                <div class="container">
+                    <div class="image">
+                        <img src="works/hsbc/HK/2.png">
 
                     </div>
                 </div>
@@ -73,7 +101,7 @@ var _hmt = _hmt || [];
                 <div class="container">
                     <div class="text">
                         <h3>HSBC Mortgage Process Optimization</h3>
-                        <h5>New Mortgage - Customer Channel(Hong Kong)</h5>
+                        <h5>HSBC Hong Kong - Customer Channel</h5>
                         <p>I am the BA(business analyst) person for this project.</p>
 
                         <p>It is for customers to create new mortgage applications by themselves easily from the HSBC official website.</p>
@@ -82,10 +110,20 @@ var _hmt = _hmt || [];
 
                     </div>
                     <div class="image">
-                        <img src="works/hsbc/cus1.png">
+                        <img src="works/hsbc/HK/3.png">
                     </div>
                 </div>
             </div>
+            <div class="slide">
+                <div class="container">
+                    <div class="image">
+                        <img src="works/hsbc/HK/5.png">
+                        <img src="works/hsbc/HK/7.png">
+
+                    </div>
+                </div>
+            </div>
+
         </div>
         <div class="section">
 
@@ -100,9 +138,22 @@ var _hmt = _hmt || [];
 
                         <p>It is powered by Magento, integrated with PMI, OMS, CRM, third-party payment tools, and data analytical tools.</p>
                     </div>
-                    <div class="image">
-                        <img src="works/HM/website1(1).png">
-                        <img src="works/HM/website2(1).png">
+                    <div class="longImage">
+                        <img src="works/HM/hm1.png">
+                    </div>
+                </div>
+            </div>
+            <div class="slide">
+                <div class="container">
+                    <div class="longImage">
+                        <img src="works/HM/hm2.png">
+                    </div>
+                </div>
+            </div>
+            <div class="slide">
+                <div class="container">
+                    <div class="longImage">
+                        <img src="works/HM/hm3.png">
                     </div>
                 </div>
             </div>
@@ -118,9 +169,19 @@ var _hmt = _hmt || [];
                         <p>It integrated WeChat ecosystem, data can be monitored and analyzed more effectively</p>
                     </div>
                     <div class="image">
-                        <img src="works/HM/mini1(1).png">
-                        <img src="works/HM/mini2(1).jpg">
-                        <img src="works/HM/mini3(1).jpg">
+                        <img src="works/HM/wc1.jpg">
+                        <img src="works/HM/wc5.jpg">
+
+                    </div>
+                </div>
+            </div>
+            <div class="slide">
+                <div class="container">
+                    <div class="image">
+                        <img src="works/HM/wc2.jpg">
+                        <img src="works/HM/wc3.jpg">
+                        <img src="works/HM/wc4.jpg">
+
 
                     </div>
                 </div>
@@ -135,7 +196,7 @@ var _hmt = _hmt || [];
                         <p>Native Android and iOS applications.<br>It integraed with advertising and data tracking tools especially for Apps.</p>
                     </div>
                     <div class="image">
-                        <img src="works/HM/app1(1).png">
+                        <img src="works/HM/app1.png">
                     </div>
                 </div>
             </div>
@@ -145,14 +206,34 @@ var _hmt = _hmt || [];
                 <div class="container">
                     <div class="text">
                         <h3>Rendong HOLDINGS</h3>
-                        <h5>Heli Pay</h5>
+                        <h5>Helipay Cross-border Payment</h5>
                         <p>I am the product manager who is responsible for designing payment products for clients across various industries who has the needs for funds inbound and outbound.</p>
 
                         <p>The products of payment are in the form of system interfaces or services. Some industry giants of payment, such as Payoneer, KVB are our partners.</p>
                     </div>
-                    <div class="image">
+                    <div class="longImage">
                         <img src="works/helibao/1.png">
+                    </div>
+                </div>
+            </div>
+            <div class="slide">
+                <div class="container">
+                    <div class="image">
                         <img src="works/helibao/2.png">
+                    </div>
+                </div>
+            </div>
+            <div class="slide">
+                <div class="container">
+                    <div class="image">
+                        <img src="works/helibao/3.png">
+                    </div>
+                </div>
+            </div>
+            <div class="slide">
+                <div class="container">
+                    <div class="image">
+                        <img src="works/helibao/4.png">
                     </div>
                 </div>
             </div>
@@ -168,9 +249,36 @@ var _hmt = _hmt || [];
                         <p>Banggood is the industry leader in cross-border e-commerce. It not only sells on its independent site, but spreads its sales business in a broad range of e-commerce platforms such as Amazom, Wish, Ebay, Aliexpress, etc.</p>
 
                     </div>
-                    <div class="image">
-                        <img src="works/banggood/1.png">
-                        <img src="works/banggood/3.png">
+                    <div class="longImage">
+                        <img src="works/banggood/bg1.png">
+                    </div>
+                </div>
+            </div>
+            <div class="slide">
+                <div class="container">
+                    <div class="longImage">
+                        <img src="works/banggood/bg2.png">
+                    </div>
+                </div>
+            </div>
+            <div class="slide">
+                <div class="container">
+                    <div class="longImage">
+                        <img src="works/banggood/nc1.png">
+                    </div>
+                </div>
+            </div>
+            <div class="slide">
+                <div class="container">
+                    <div class="longImage">
+                        <img src="works/banggood/nc3.png">
+                    </div>
+                </div>
+            </div>
+            <div class="slide">
+                <div class="container">
+                    <div class="longImage">
+                        <img src="works/banggood/nc4.png">
                     </div>
                 </div>
             </div>
@@ -185,9 +293,15 @@ var _hmt = _hmt || [];
 
                         <p>This product is consumer-oriented, it focuses on the customer experience and conversion rate when designing the product.</p>
                     </div>
-                    <div class="image">
-                        <img src="works/qf/1.png">
-                        <img src="works/qf/2.png">
+                    <div class="longImage">
+                        <img src="works/qf/qf1.png">
+                    </div>
+                </div>
+            </div>
+            <div class="slide">
+                <div class="container">
+                    <div class="longImage">
+                        <img src="works/qf/qf2.png">
                     </div>
                 </div>
             </div>
@@ -206,14 +320,15 @@ var _hmt = _hmt || [];
     <script>
         $(function() {
             $('#fullPage').fullpage({
-                sectionsColor: ['#4BBFC3', '#7BAABE', '#fc6c7c', '#1bbc9b', '#f90', '#ff5f45', '#fec401'],
+                sectionsColor: ['#7BAABE', '#fec401', '#fc6c7c', '#1bbc9b', '#f90', '#ff5f45', '#4BBFC3'],
                 'navigation': true,
+                menu: '#menu'
             });
         });
 
     </script>
-    <script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>>
-    <script src="script.js"></script>>
+    <script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
