--- a/cn.html
+++ b/cn.html
@@ -40,11 +40,11 @@
                     <div class="text">
                         <h3>HSBC 抵押贷款流程优化</h3>
                         <h5>中国房贷小程序</h5>
-                            <p>我是这个项目的商业分析师（Business Analyst）。</p>
+                        <p>我是这个项目的商业分析师（Business Analyst）。</p>
 
-                            <p>它允许客户通过微信发起抵押贷款申请，并自行提交。申请提交后将立即分配一名销售人员。</p>
-                            <p>这里的数字技术亮点是OCR和电子签名功能。该程序与汇丰全球API集成。
-                            <p>
+                        <p>它允许客户通过微信发起抵押贷款申请，并自行提交。申请提交后将立即分配一名销售人员。</p>
+                        <p>这里的数字技术亮点是OCR和电子签名功能。该程序与汇丰全球API集成。
+                        <p>
                     </div>
                     <div class="image">
                         <img src="works/hsbc/China/1.png">
@@ -309,8 +309,9 @@
         </div>
         <div class="section">
             <div class="slide">
-                <h3>与我联系</h3>
-                <h5>让我们开始交谈！</h5>
+                <h3>与我联系——让我们开始交谈！</h3>
+                <h5>联系电话：+86-15622763765</h5>
+                <p>我目前正在寻找<br>数字转型、数字创新、业务分析、商业智能或IT咨询方面的职位机会。<br>此外，我也愿意考虑创业领域的角色。</p>
                 <a href="mailto:marylee10_31@hotmail.com?subject=Hello Mary&body=Hi%20there,">发送邮件</a>
 
             </div>
