--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
                     <div class="text">
                         <h3>HSBC Mortgage Process Optimization</h3>
                         <h5>China DMMA - Mortgage Mini Program</h5>
-                            <p>I am the BA(business analyst) person for this project.</p>
+                        <p>I am the BA(business analyst) person for this project.</p>
 
-                            <p>It allows customer to initiate a mortgage application from Wechat and submit it by themselves. A Sales person will be allocated immediately upon application submission.</p>
-                            <p>The highlights in digital technologies here are OCR and E-sign feature. The program is integrated with HSBC global APIs
-                            <p>
+                        <p>It allows customer to initiate a mortgage application from Wechat and submit it by themselves. A Sales person will be allocated immediately upon application submission.</p>
+                        <p>The highlights in digital technologies here are OCR and E-sign feature. The program is integrated with HSBC global APIs
+                        <p>
                     </div>
                     <div class="image">
                         <img src="works/hsbc/China/1.png">
@@ -308,9 +308,10 @@
         </div>
         <div class="section">
             <div class="slide">
-                <h3>Contact me</h3>
-                <h5>Let's get in touch!</h5>
-                <a href="mailto:marylee10_31@hotmail.com?subject=Hello Mary&body=Hi%20there,">发送邮件</a>
+                <h3>Contact me - Let's get in touch!</h3>
+                <h5>Tel: +86-15622763765</h5>
+                <p>I am currently seeking opportunities in the areas of<br> digital transformation, digital innovation, business analysis, business intelligence, or IT consultancy. <br>Additionally, I am open to considering roles within the entrepreneurial sphere.</p>
+                <a href="mailto:marylee10_31@hotmail.com?subject=Hello Mary&body=Hi%20there,">Send Email</a>
 
             </div>
         </div>
