--- a/cn.html
+++ b/cn.html
@@ -84,7 +84,7 @@
 
                     </div>
                     <div class="image">
-                        <img src="works/hsbc/HK/1.png">
+                        <img src="works/hsbc/HK/1_mosaic.png">
 
                     </div>
                 </div>
@@ -92,7 +92,7 @@
             <div class="slide">
                 <div class="container">
                     <div class="image">
-                        <img src="works/hsbc/HK/2.png">
+                        <img src="works/hsbc/HK/2_mosaic.png">
 
                     </div>
                 </div>
